# caterpillar_clay

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TECHNICAL.md  cloudbuild.yaml  test_admin_auth.sh
.github/workflows/: deploy.yml
admin_static/: index.html
migrations/: 001_create_users.sql  002_create_products.sql  003_create_orders.sql  004_create_order_items.sql  005_seed_products.sql  006_add_polar_price_id.sql  007_add_polar_product_id.sql  008_unix_timestamps.sql  009_product_images.sql  010_site_settings.sql  011_newsletter_subscribers.sql  012_product_notifications.sql  013_product_styles.sql  014_rename_polar_to_stripe.sql  015_rename_easypost_to_shippo.sql  016_add_payment_intent_id.sql  017_add_product_dimensions.sql  018_add_shop_address.sql  019_add_order_shipping.sql  020_add_label_url.sql  021_add_admin_user.sql
scripts/: import_images.sh  setup_polar_products.sh
src/: config.rs  error.rs  main.rs
src/db/: mod.rs  pool.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: mod.rs  newsletter.rs  order.rs  product.rs  product_notification.rs  product_style.rs  settings.rs  user.rs
src/routes/: auth.rs  cart.rs  mod.rs  newsletter.rs  orders.rs  products.rs  settings.rs  shipping.rs  webhooks.rs
src/routes/admin/: dashboard.rs  mod.rs  newsletter.rs  orders.rs  products.rs  settings.rs
src/services/: clerk.rs  easypost.rs  email.rs  image.rs  jwks.rs  mod.rs  polar.rs  rate_limiter.rs  resend.rs  shippo.rs  stripe.rs
src/storage/: local.rs  mod.rs  r2.rs  s3.rs  trait.rs
static/: about.html  account.html  artist.html  index.html  login.html  robots.txt
static/admin/: index.html
static/gallium/: index.html
static/scripts/: caterpillar.js
templates/emails/: order_confirmation.html  order_delivered.html  order_shipped.html
