[package]
name = "caterpillar-clay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
libsql = "0.9.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace", "normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
async-trait = "0.1.89"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
resend-rs = "0.20.0"
async-stripe = { version = "0.41.0", default-features = false, features = ["runtime-tokio-hyper", "checkout", "products", "connect"] }
hex = "0.4"
hmac = "0.12"
redis = { version = "1.0.2", features = ["tokio-comp", "tokio-rustls-comp"] }
rustls = { version = "0.23", features = ["ring"] }
image = "0.25"
